<resources>
    <string name="app_name">Finger Dance</string>

    <string name="ask_user">Please select a number to start</string>

    <string name="start_game">Start Game!</string>
    <string name="quick_play">Quick Play</string>
    <string name="start_game_or_quick_play">OR</string>
    <string name="warning_input_mismatch">Enter correct Input!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_game_result">Game Result</string>
    <string name="enter_number_hint"> Enter here</string>
    <string name="announce_winner"> %1$s has WON !</string>
    <string name="announce_loser_hand_lifted" >%1$s has lifted first</string>
    <string name="announce_loser_pressed_wrong"> %1$s has pressed WRONG tile</string>
    <string name="replay_game">Play Again</string>
    <string name="use_one_finger">Each player can use only one finger</string>
    <string name="use_more_than_one">Each player can use more than one finger</string>
    <string name="use_more_than_two">Each player can use more than two fingers</string>
</resources>
