<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    >
    <TextView
        android:id="@+id/ask_user_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ask_user"
        android:padding="25dp"
        android:layout_gravity="center"
        android:elegantTextHeight="false"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/warning_input_mismatch"
        android:id="@+id/warning_input_mismatch"
        android:layout_gravity="center"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/user_input_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/enter_number_hint"
                android:padding="25dp"
                android:gravity="top"
                android:layout_gravity="center"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_game"
                android:id="@+id/start_game_button"
                android:layout_gravity="center"
                />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_game_or_quick_play"
            android:layout_gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quick_play"
            android:id="@+id/quick_play_button"
            android:layout_gravity="center"
            />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/no_of_touches_allowed"
        android:layout_gravity="center"
        android:paddingTop="10dp"/>
</LinearLayout>